Adjusted bug with media links not properly centering on firefox

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -148,6 +148,7 @@ body::-webkit-scrollbar-thumb {
     transition: transform 0.3s ease;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
     box-sizing: border-box;
+    line-height: 34px;
 }
 .media-links .link:hover {
     transform: scale(1.2);
